@@ -1,5 +1,10 @@
 2006-05-07	Benedikt Meurer <benny@xfce.org>
 
+	* exo-desktop-item-edit/exo-die-icon-button.{c,h}: This wasn't meant
+	  to be imported.
+
+2006-05-07	Benedikt Meurer <benny@xfce.org>
+
 	* exo-desktop-item-edit/exo-die-editor.c(exo_die_editor_icon_clicked):
 	  Use gtk_file_filter_add_pixbuf_formats().
 
